--- a/my-project/src/index.css
+++ b/my-project/src/index.css
@@ -4,9 +4,11 @@
 
 @layer base {
   body {
-    background-color: #f1f5f9;
+    background: #f1f5f9;
     position: relative;
     z-index: 1;
+    margin: 0;
+    padding: 0;
   }
 }
 
