--- a/my-project/src/index.css
+++ b/my-project/src/index.css
@@ -434,3 +434,50 @@ span.flatpickr-weekday.dark,
 .text-green {
   color: green;
 }
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.animate-spin {
+  animation: spin 4s infinite linear;
+}
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-20px);
+  }
+  60% {
+    transform: translateY(-10px);
+  }
+}
+
+.animate-bounce {
+  animation: bounce 3s infinite;
+}
+@keyframes ellipsisAnimation {
+  0% {
+    content: ".";
+  }
+  33% {
+    content: "..";
+  }
+  66% {
+    content: "...";
+  }
+}
+
+.ellipsis::after {
+  content: ".";
+  animation: ellipsisAnimation 1s infinite steps(3);
+}
