--- a/my-project/src/index.css
+++ b/my-project/src/index.css
@@ -481,3 +481,25 @@ span.flatpickr-weekday.dark,
   content: ".";
   animation: ellipsisAnimation 1s infinite steps(3);
 }
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  border-radius: 5px;
+  padding: 20px;
+  outline: none;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
